--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
 name: dyno
-description: A dynamic isolation pool with load balance.
+description: An isolation pool with load balancer for Flutter. Creates and kills isolates as needed.
 version: 0.0.1
-homepage: 
+homepage: https://github.com/ertgrulll/dyno
+repository: https://github.com/ertgrulll/dyno
+issue_tracker: https://github.com/ertgrulll/dyno/issues
+maintainer: Ertuğrul Yakın (@ertgrulll)
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
